poll.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poll
  namespace: default
  labels:
    app: poll
spec:
  replicas: 2
  selector:
    matchLabels:
      app: poll
  template:
    metadata:
      labels:
        app: poll
    spec:
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app
                operator: In
                values:
                - store
            topologyKey: "kubernetes.io/hostname"
      containers:
      - name: poll
        image: epitechcontent/t-dop-600-poll:k8s
        resources:
          limits:
            memory: "256Mi"
      restartPolicy: Always
