result.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result
  namespace: default
  labels:
    app: result
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image:  epitechcontent/t-dop-600-result:k8s
        ports:
        - containerPort: 8080
      restartPolicy: always
