worker.deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: default
  labels:
    app: worker
spec:
  replicas: 0
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - name: worker
        image: epitechcontent/t-dop-600-worker:k8s
        ports:
        - containerPort: 5432
      restartPolicy: Always
