result.service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  selector:
    app: result
  type: LoadBalancer  
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
